--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,26 @@
 <div class="body"></div>
+<br>
+<div class="container">
+		{{#each errors}}
+			<div class="alert alert-danger" role="alert">
+  {{this}}
+</div>
+{{/each}}
+</div>
+
+
 		<div class="grad"></div>
 		<div class="header">
+			
 			<div>Login <span>Form</span></div>
+			 
 		</div>
 		<br>
 		<div class="login">
-            <form action="/home">
+            <form method="post" action="/login" class="text-center" >
+		
                 <input type="text" placeholder="Email-Id" name="Email"><br>
 				<input type="password" placeholder="password" name="password"><br>
-				<input type="submit" value="Login" class="btn btn-primary">
+				<input type="submit" value="Login" class="btn btn-primary mt-3">
             </form>
 		</div>
