--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,16 @@
     
     <div class="container-fluid ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="" style="color: azure; font-size: large;">Home <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <div class="container-fluid d-flex justify-content-end">
         
   
   
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</button>
+      <a href="/logout" class="btn btn-outline-success my-2 my-sm-0" type="submit">Log Out</a>
     
   </div>
   
@@ -21,12 +21,12 @@
     <div class="row">
         {{#each product}}
     <div class="col-md-3 ">
-        <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <div class="card" style="width: 18rem; background-color: ;">
+        <img class="card-img-top" src="{{image}}" alt="Card image cap">
         <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">{{name}}</h5>
+        <p class="card-text">{{description}}</p>
+        <a href="#" class="btn btn-primary">Buy Now</a>
         </div>
 </div>
 </div>
